--- a/SimpleTracker.csproj
+++ b/SimpleTracker.csproj
@@ -67,6 +67,9 @@
   <ItemGroup>
     <Compile Include="Binders\GpsTrackerServiceBinder.cs" />
     <Compile Include="Connections\GpsTrackerServiceConnection.cs" />
+    <Compile Include="Database\SimpleGpsDatabase.cs" />
+    <Compile Include="Database\SimpleGpsLocation.cs" />
+    <Compile Include="Database\SimpleGpsRoute.cs" />
     <Compile Include="Services\GpsTrackerService.cs" />
     <Compile Include="SimpleGpsLocationListener.cs" />
     <Compile Include="MainActivity.cs" />
@@ -111,6 +114,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.Core.Utils" Version="28.0.0.3" />
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.3" />
