--- a/StravaIntegrator/packages.config
+++ b/StravaIntegrator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="monoandroid10.0" />
   <package id="sqlite-net-pcl" version="1.7.335" targetFramework="monoandroid10.0" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.3" targetFramework="monoandroid10.0" />
   <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="monoandroid10.0" />
