Add setting model for database. Improve settings view. Introduce encrypt/decrypt methods.

--- a/SimpleDatabase/SimpleDatabase.csproj
+++ b/SimpleDatabase/SimpleDatabase.csproj
@@ -52,6 +52,7 @@
     <Compile Include="SimpleGpsRoute.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleGpsSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
