--- a/StravaIntegrator/StravaIntegrator.csproj
+++ b/StravaIntegrator/StravaIntegrator.csproj
@@ -79,9 +79,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\UploadActivityModel.cs" />
     <Compile Include="Models\AuthorizationTokens.cs" />
+    <Compile Include="Models\HttpResponseResult.cs" />
     <Compile Include="Models\OneTimeUsableCode.cs" />
+    <Compile Include="Models\PublishActivity.cs" />
     <Compile Include="Models\TokenExchangeResponse.cs" />
+    <Compile Include="Models\UploadActivityResult.cs" />
     <Compile Include="StravaAuthentication.cs" />
     <Compile Include="StravaPublisher.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
