--- a/SimpleTracker/SimpleTracker.csproj
+++ b/SimpleTracker/SimpleTracker.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Binders\GpsTrackerServiceBinder.cs" />
     <Compile Include="Broadcasters\Receivers\LocationSettingsChagnedReceiver.cs" />
     <Compile Include="Common\ApplicationSecrets.cs" />
+    <Compile Include="Common\SimpleConstants.cs" />
     <Compile Include="Common\Utilities.cs" />
     <Compile Include="Connections\GpsTrackerServiceConnection.cs" />
     <Compile Include="Dialogs\ConfirmExitDialog.cs" />
